# webfox

./: Cargo.toml  README.md  rustfmt.toml
.github/workflows/: release.yml  rust.yml
src/: README.md  app.rs  cli.rs  main.rs
