[package]
name = "wx"
version = "0.1.0"
authors = ["Axel Smeets <murlocbrand@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
termcolor = "1.1.0"
serde = "1.0.77"
serde_json = "1.0.23"

[dependencies.reqwest]
version = "0.10"
default-features = false
features = ["default-tls", "blocking", "json", "cookies"]

